--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-  padding-top: 5rem;
+	padding-top: 5rem;
 }
 
 .intro{
@@ -16,8 +16,17 @@ body {
 	background-size:cover;
 }
 
+.hero{
+	background: linear-gradient(
+		rgba(145, 187, 255, 0.45), 
+		rgba(145, 187, 255, 0.45)
+		),url(../img/blur-hero.jpg) no-repeat center;
+	background-size: cover;
+	min-height: 400px;
+}
 
 .content-section{
+	min-height: 500px;
 	padding: 80px 0 40px 0;
 }
 
