--- a/css/style.css
+++ b/css/style.css
@@ -33,8 +33,61 @@ body {
 .works-section {
 	width: 100%;
 	padding: 50px 0;
+	/*color: #fff;*/
+	/*background: #212121 url(../img/code.jpg) no-repeat center;*/
+}
+
+.work-container{
+	position: relative;
+}
+
+.work-img{
+	opacity: 1;
+	display: block;
+	width: 100%;
+	height: auto;
+	transition: .5s ease;
+	backface-visibility: hidden;
+}
+
+.work-container:hover .work-img{
+	opacity: 0.3;
+}
+
+.work-container:hover .work-hover-div {
+	opacity: 1;
+}
+
+.work-hover-div a{	
+	text-decoration: none;
+}
+
+.work-hover-div{
+	transition: .5s ease;
+	opacity: 0;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
+	text-align: center;
+}
+
+.learn-more-btn {
+	border: 3px solid #4CAF50;
+	background-color: #fff;
+	color: black;
+	padding: 16px 32px;
+}
+
+.learn-more-btn:hover {
+	transition: .5s ease;
+	background-color: #4CAF50;
 	color: #fff;
-	background: #212121 url(../img/code.jpg) no-repeat center;
+}
+
+.work-img{
+	width: 100%;
 }
 
 .techs img{
